--- a/07 Day 17-05-25/Untitled.ipynb
+++ b/07 Day 17-05-25/Untitled.ipynb
@@ -220,16 +220,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "bd7bc585-6837-49fc-a40f-447dd8c6bce4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'ab', 'abc', 'abcd']\n"
+     ]
+    }
+   ],
    "source": [
     "# 70. Sort List by Length pfStrings\n",
     "def sort_by_length(lst):\n",
     "    return sorted(lst,key=len)\n",
     "\n",
-    "print(sort_by_length(["
+    "print(sort_by_length([\"a\",\"abcd\",\"abc\",\"ab\"]))"
    ]
   }
  ],
