--- a/13 Day 23-05-25/Untitled.ipynb
+++ b/13 Day 23-05-25/Untitled.ipynb
@@ -77,7 +77,29 @@
    "id": "6391f3f6-ce99-4b96-8b4f-4762fa95f423",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "List Comprehension (Squares): Using list comprehension, create a list of squares from 1 to 10.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28e3e92f-58a4-43f2-a9ef-1b29d1f8a3d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Find Max in List: Write a function to find the largest number in a list without using max()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3eafefe-4dd6-41df-9d87-0f79cda973a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 10) Hello, Name: Write a function that takes a name as input and prints \"Hello, [Name]!\".\n"
+   ]
   }
  ],
  "metadata": {
