--- a/14 Day 24-05-25/Untitled.ipynb
+++ b/14 Day 24-05-25/Untitled.ipynb
@@ -229,16 +229,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "be7d20ae-317c-4e55-8b33-1e0595a72337",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 0)\n"
+     ]
+    }
+   ],
    "source": [
     "# 140 Count Uppercase and lowercase letter in a string \n",
     "def count_case(s):\n",
     "    upper = sum(1 for c in s if c.isupper())\n",
-    "    lower = sum(1 for "
+    "    lower = sum(1 for c in s if s.islower())\n",
+    "    return upper,lower\n",
+    "\n",
+    "print(count_case(\"Hello World\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "865dd4f2-61e7-49f2-9abc-bcbca988c0cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
