--- a/15 Day 17-06-25/Untitled.ipynb
+++ b/15 Day 17-06-25/Untitled.ipynb
@@ -254,16 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "78a4e65e-78f2-48c5-a225-97a87db1c5ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# 150. Convert a List of Strings to Integers \n",
     "def str_list_to_int(lst):\n",
     "    return [int(x) for x in lst]\n",
     "\n",
-    "print(str_list_to_int(['1','2'"
+    "print(str_list_to_int(['1','2','3']))"
    ]
   }
  ],
