--- a/18 Day 20-07-25/Untitled.ipynb
+++ b/18 Day 20-07-25/Untitled.ipynb
@@ -210,13 +210,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "ec7cbc12-e59b-496a-beb8-4b667340971f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 8)\n"
+     ]
+    }
+   ],
    "source": [
     "# 180. Count Uppercase and Lowercase letters in a string\n",
-    "def count = "
+    "def count_case(s):\n",
+    "    upper = sum(1 for c in s if c.isupper())\n",
+    "    lower = sum(1 for c in s if c.islower())\n",
+    "    return upper,lower\n",
+    "\n",
+    "print(count_case(\"Hello World\"))"
    ]
   }
  ],
