--- a/18 Day 20-06-25/Untitled.ipynb
+++ b/18 Day 20-06-25/Untitled.ipynb
@@ -216,9 +216,7 @@
    "outputs": [],
    "source": [
     "# 180. Count Uppercase and Lowercase letters in a string\n",
-    "def count_case(s):\n",
-    "    upper = sum(1 for c in s if c.isupper())\n",
-    "    lower = sum"
+    "def count = "
    ]
   }
  ],
