--- a/21 Day 23-06-25/Untitled.ipynb
+++ b/21 Day 23-06-25/Untitled.ipynb
@@ -198,16 +198,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "4fbbd935-afbd-4061-ae3a-74fd016d473a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# 210. Find the Difference Between Two Lists\n",
     "def list_difference(a,b):\n",
     "    return list(set(a)-set(b))\n",
     "\n",
-    "print(list_differ"
+    "print(list_difference([1,2,3,4],[2,4]))"
    ]
   }
  ],
