--- a/27 Day 29-06-25/Untitled.ipynb
+++ b/27 Day 29-06-25/Untitled.ipynb
@@ -216,14 +216,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "494e6b42-706e-4739-a714-3e2fd60394ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'p', 'e']\n"
+     ]
+    }
+   ],
    "source": [
     "# 270. Find the Common Characters Between Two Strings\n",
     "def common_chars(s1, s2):\n",
-    "    return "
+    "    return list(set(s1) & set(s2))\n",
+    "\n",
+    "print(common_chars(\"apple\",\"grapes\"))"
    ]
   }
  ],
