--- a/28 Day 30-06-25/Untitled.ipynb
+++ b/28 Day 30-06-25/Untitled.ipynb
@@ -228,16 +228,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "0a0cc4a2-d61b-434d-a8d0-7ff9dc18f21b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# 280. Check if Two  Strings Are Anagrams\n",
     "def are_anagrams(s1,s2):\n",
     "    return sorted(s1) == sorted(s2)\n",
     "\n",
-    "print(are_anagrams"
+    "print(are_anagrams(\"listen\",\"silent\"))\n",
+    "print(are_anagrams(\"hello\",\"world\"))"
    ]
   }
  ],
