--- a/29 Day 01-07-25/Untitled.ipynb
+++ b/29 Day 01-07-25/Untitled.ipynb
@@ -182,17 +182,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "68bbfae6-418f-4a9d-b4c8-7f3ab9afe18d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "# 287. Find the maximum product of two integers in a list\n",
     "def max_product(nums):\n",
     "    nums.sort()\n",
     "    return max(nums[0]*nums[1],nums[-1]*nums[-2])\n",
     "\n",
-    "print"
+    "print(max_product([-10,-20,1,3,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7ded6c92-2c40-474e-bff5-5add7cc01cfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 3), (1, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 288. Find All Pairs in a List That Sum to a Target\n",
+    "\n",
+    "def pairs_with_sum(nums, target):\n",
+    "    seen = set()\n",
+    "    pairs = set()\n",
+    "    for num in nums:\n",
+    "        complement = target - num\n",
+    "        if complement in seen:\n",
+    "            pairs.add(tuple(sorted((num, complement))))\n",
+    "        seen.add(num)\n",
+    "    return list(pairs)\n",
+    "print(pairs_with_sum([1,2,3,2,4,5], 5))  # [(2, 3), (1, 4)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "eb035fae-952f-4e55-99ff-ca23b31acaa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 289. Convert a List of Characters to a String\n",
+    "def list_to_string(lst):\n",
+    "    return ''.join(lst)\n",
+    "print(list_to_string(['H', 'e', 'l', 'l', 'o']))  # Hello\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1253a1c8-dc7d-41c1-b1e8-f9d53d7904cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bab\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 290. Find the Longest Palindromic Substring\n",
+    "def longest_palindrome(s):\n",
+    "    res = \"\"\n",
+    "    for i in range(len(s)):\n",
+    "        # odd length\n",
+    "        l, r = i, i\n",
+    "        while l >= 0 and r < len(s) and s[l] == s[r]:\n",
+    "            if (r - l + 1) > len(res):\n",
+    "                res = s[l:r+1]\n",
+    "            l -= 1\n",
+    "            r += 1\n",
+    "        # even length\n",
+    "        l, r = i, i + 1\n",
+    "        while l >= 0 and r < len(s) and s[l] == s[r]:\n",
+    "            if (r - l + 1) > len(res):\n",
+    "                res = s[l:r+1]\n",
+    "            l -= 1\n",
+    "            r += 1\n",
+    "    return res\n",
+    "print(longest_palindrome(\"babad\"))  # bab or aba\n"
    ]
   }
  ],
