--- a/30 Day 02-07-25/Untitled.ipynb
+++ b/30 Day 02-07-25/Untitled.ipynb
@@ -215,6 +215,28 @@
     "\n",
     "print(reverse_words(\"Hello world from python \"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3ad081e5-ec5c-49c4-b644-9a610f8d89eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 300 Flatten a nested list of lists\n",
+    "def flatten_list(nested_lst):\n",
+    "    return [item for sublist in nested_lst for item in sublist]\n",
+    "\n",
+    "print(flatten_list([[1,2],[3,4],[5]]))"
+   ]
   }
  ],
  "metadata": {
