--- a/32 Day 04-07-25/Untitled.ipynb
+++ b/32 Day 04-07-25/Untitled.ipynb
@@ -217,13 +217,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "cffef413-0012-4f1c-8439-916bff566dbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
    "source": [
     "# 320. Find the sum of the suares of numbers in a list\n",
-    "def sum_of_squares(nums"
+    "def sum_of_squares(nums):\n",
+    "    return sum(x**2 for x in nums)\n",
+    "\n",
+    "print(sum_of_squares([1,2,3]))"
    ]
   }
  ],
