--- a/33 Day 05-07-25/Untitled.ipynb
+++ b/33 Day 05-07-25/Untitled.ipynb
@@ -231,10 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c0a2fed5-3173-4f4b-a91e-2c4ad61e9c0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1], [1, 1], [1, 2, 1], [1, 3, 3, 1], [1, 4, 6, 4, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 330. Generete Pascal's triangle up to N rows\n",
     "def pascals_triangle(n):\n",
@@ -245,7 +253,10 @@
     "            last_row=triangle[-1]\n",
     "            row.extend([sum(pair) for pair in zip(last_row, last_row[1:])])\n",
     "            row.append(1)\n",
-    "        triangle.append"
+    "        triangle.append(row)\n",
+    "    return triangle\n",
+    "\n",
+    "print(pascals_triangle(5))"
    ]
   }
  ],
