--- a/35 Day 07-07-25/Untitled.ipynb
+++ b/35 Day 07-07-25/Untitled.ipynb
@@ -236,13 +236,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f8dcbdc7-1a5d-4910-9aaf-b66da6598410",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# 350. Check if a number is a power of two \n",
-    "def is_power_of_two(n):"
+    "def is_power_of_two(n):\n",
+    "    return n>0 and (n &(n-1))==0\n",
+    "\n",
+    "print(is_power_of_two(16))\n",
+    "print(is_power_of_two(18))"
    ]
   }
  ],
