--- a/37 Day 09-07-25/Untitled.ipynb
+++ b/37 Day 09-07-25/Untitled.ipynb
@@ -197,12 +197,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "28d08b5d-f82d-45cd-8a4e-afc8e2671e19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 370. Find the length of the sho"
+    "# 370. Find the length of the shortest word in a sentence\n",
+    "def shortest_word_length(sentence):\n",
+    "    words=sentence.split()\n",
+    "    return min(len(word) for word in words)\n",
+    "\n",
+    "print(shortest_word_length(\"Python is awesome\"))"
    ]
   }
  ],
