--- a/39 Day 11-07-25/Untitled.ipynb
+++ b/39 Day 11-07-25/Untitled.ipynb
@@ -54,27 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "d3635de9-8f48-4540-9182-2ba87f4a4894",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'collectons'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m ch\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(first_non_repeated_char(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mswiss\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "Cell \u001b[1;32mIn[5], line 3\u001b[0m, in \u001b[0;36mfirst_non_repeated_char\u001b[1;34m(s)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfirst_non_repeated_char\u001b[39m(s):\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollectons\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Counter\n\u001b[0;32m      4\u001b[0m     counts\u001b[38;5;241m=\u001b[39mCounter(s)\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m ch \u001b[38;5;129;01min\u001b[39;00m s:\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'collectons'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w\n"
      ]
     }
    ],
    "source": [
     "# 383. Find first non repeated character in a string\n",
     "def first_non_repeated_char(s):\n",
-    "    from collectons import Counter\n",
+    "    def find_missing_number(lst):\n",
+    "    n = len(lst) + 1\n",
+    "    expected_sum = n * (n + 1) // 2\n",
+    "    return expected_sum - sum(lst)\n",
+    "print(find_missing_number([1, 2, 4, 5, 6]))\n",
+    "\n",
+    "    from collections import Counter\n",
     "    counts=Counter(s)\n",
     "    for ch in s:\n",
     "        if counts[ch]==1:\n",
@@ -82,7 +83,185 @@
     "    return None\n",
     "\n",
     "print(first_non_repeated_char(\"swiss\"))\n",
-    "    "
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "31efc4f8-c5a5-4b6c-88d2-c78bf4b353f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 384. Calculate the missing number in a list of cinsecutive integers\n",
+    "def consecutive_integers(lst):\n",
+    "    n = len(lst) + 1\n",
+    "    expected_sum=n*(n+1)//2\n",
+    "    return expected_sum -sum(lst)\n",
+    "\n",
+    "print(consecutive_integers([1,2,3,5,7]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5188ba78-7b1f-4d44-a9d9-59a0d4a70b57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 385.Calculate the sun of digits raised to thier respective positions\n",
+    "def sum_digits_pos(n):\n",
+    "    return sum(int(d)**(i+1) for i,d in enumerate(str(n)))\n",
+    "\n",
+    "print(sum_digits_pos(123))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9dbb2f62-ee65-42bf-8df4-2f5e1f201caa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[], [1], [2], [1, 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 386. Generate ALl subsetes (power set) of a list\n",
+    "def power_set(lst):\n",
+    "    result=[[]]\n",
+    "    for elem in lst:\n",
+    "        result+=[curr+[elem] for curr in result]\n",
+    "    return result \n",
+    "\n",
+    "print(power_set([1,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2225170f-6923-44e0-a9dc-bf084d027826",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 387. Count the number of palindromic substrings in a string\n",
+    "def count_palindromic_substrings(s):\n",
+    "    count = 0\n",
+    "\n",
+    "    def expand(left, right):\n",
+    "        nonlocal count\n",
+    "        while left >= 0 and right < len(s) and s[left] == s[right]:\n",
+    "            count += 1\n",
+    "            left -= 1\n",
+    "            right += 1\n",
+    "\n",
+    "    for i in range(len(s)):\n",
+    "        expand(i, i)       # Odd-length palindromes\n",
+    "        expand(i, i + 1)   # Even-length palindromes\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "print(count_palindromic_substrings(\"aaa\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "31e72101-48ac-4d3a-b4dd-48ce9cd6e9f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 388.  Rotate a list to the right by K steps \n",
+    "def rotate_right(lst,k):\n",
+    "    k=k%len(lst)\n",
+    "    return lst[-k:]+lst[:-k]\n",
+    "\n",
+    "print(rotate_right([1,2,3,4,5],2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "81f76b2e-6b70-45df-91fd-952f85aca6be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 389. Rotate a list to the right by K steps\n",
+    "def rotate_right(lst,k):\n",
+    "    k = k%len(lst)\n",
+    "    return lst[-k:] + lst[:-k]\n",
+    "\n",
+    "print(rotate_right([1,2,3,4,5],2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "225b3940-853f-4325-af78-6f8ce495ced1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 389. Check if a number is a perfect number\n",
+    "# (sum of proper divisors equals the number)\n",
+    "def is_perfect_number(n):\n",
+    "    divisors_sum = sum(i for i in range(1,n) if n % i ==0)\n",
+    "    return divisors_sum == n\n",
+    "\n",
+    "print(is_perfect_number(28))\n",
+    "print(is_perfect_number(12))"
    ]
   }
  ],
