--- a/Code/45 Day 17-07-25/Untitled.ipynb
+++ b/Code/45 Day 17-07-25/Untitled.ipynb
@@ -304,9 +304,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f054ef15-5134-4606-9c56-3ee01a5311b7",
+   "metadata": {},
+   "source": [
+    "### 4. Random Forest Classifier- Titanic Survival"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "24548dab-caa8-4d59-844c-e3f1b73fa081",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Example titanic-like dataset\n",
+    "\n",
+    "data = {\n",
+    "    'Age':[22,38,26,35,28],\n",
+    "    'Fare': [7.25,71.28,7.92,53.10,8.05],\n",
+    "    'Survived':[0,1,1,1,0]\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "X=df[['Age','Fare']]\n",
+    "y = df['Survived']\n",
+    "\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
+    "\n",
+    "model = RandomForestClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Accuracy:\",accuracy_score(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3490331-1cf3-4fe0-bde4-023690e769cf",
+   "metadata": {},
+   "source": [
+    "## 5. K-Nearest Neighbors - Classify Digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ea61b7c0-aade-4e3d-b898-20f9fde94fc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9833333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_digits\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "digits = load_digits()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(digits.data,digits.target, test_size=0.2, random_state=42)\n",
+    "\n",
+    "model = KNeighborsClassifier(n_neighbors=3)\n",
+    "model.fit(X_train,y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Accuracy:\",accuracy_score(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "982506b9-599b-4804-a57a-113fa5ee1b27",
+   "metadata": {},
+   "source": [
+    "## 6.Support Vector Machine - Cancer Detection "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4f6b6580-42f7-49b5-bff7-a4cf18c1edd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.956140350877193\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_breast_cancer\n",
+    "from sklearn.svm import SVC \n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "cancer = load_breast_cancer()\n",
+    "X_train,X_test,y_train,y_test = train_test_split(cancer.data,cancer.target, test_size=0.2,random_state=42)\n",
+    "\n",
+    "\n",
+    "model = SVC(kernel = 'linear')\n",
+    "model.fit(X_train,y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(\"Accuracy:\",accuracy_score(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "463d137f-6204-4292-85e7-70c7e0c06305",
+   "metadata": {},
+   "source": [
+    "## 7. Naive Bayres - Text Classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "392019d8-bf52-4faf-9543-2841e560dac3",
+   "id": "5a7c928f-ddc6-46ee-a98c-6dd5eec512ef",
    "metadata": {},
    "outputs": [],
    "source": []
